Changelog
=========

v0.1.1.0
========

Not released yet.

- Fix: use .ConfigureAndWait(false) when invoking HttpClient methods for
  improved resilience.
- New: support for including deleted documents in queries. Requires SOFT_DELETE
  feature to be enabled on the server.
- New: support for raw queries.
- Fix: If-Modified-Since was not respected in GetAsync.

v0.1.0.1
========

Released on 26 November, 2014

- Initial release.